Ajustando as mensagens que o servlet envia ao JSP